Config for railway

--- a/batch1_assessment/src/main/resources/application.properties
+++ b/batch1_assessment/src/main/resources/application.properties
@@ -1,7 +1,20 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=transactions
+# spring.data.mongodb.host=localhost
+# spring.data.mongodb.port=27017
+# spring.data.mongodb.database=transactions
+# mongosh "mongodb://mongo:beaw92frCWjtrSNdQZtc@containers-us-west-205.railway.app:5660"
+spring.data.mongodb.host=${MONGODB_HOST}
+spring.data.mongodb.port=${MONGODB_PORT}
+spring.data.mongodb.database=${MONGO_DB}
+spring.data.mongodb.username=${MONGODB_USERNAME}
+spring.data.mongodb.password=${MONGODB_PASSWORD}
+spring.data.mongodb.authentication-database=admin
 
-spring.datasource.url=jdbc:mysql://localhost:3306/acme_bank
-spring.datasource.username=fred
-spring.datasource.password=fredfred
+
+# mysql -hcontainers-us-west-189.railway.app -uroot -p3wQQ4kUYWM33KyjKPO6r --port 6443 --protocol=TCP railway
+# spring.datasource.url=jdbc:mysql://localhost:3306/acme_bank
+# spring.datasource.username=fred
+# spring.datasource.password=fredfred
+# jdbc:mysql://containers-us-west-189.railway.app:6443/railway
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
